--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-    "name": "client-sincsports-divisions-lambda",
-    "version": "1.0.0",
-    "description": "A lambda function that retrieves sincsports divisions.",
-    "main": "index.js",
-    "scripts": {
-        "test": "gulp test"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/ocrosby/client-sincsports-divisions-lambda.git"
-    },
-    "keywords": [
-        "SincSports",
-        "Client",
-        "Divisions"
-    ],
-    "author": "Omar Crosby",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/ocrosby/client-sincsports-divisions-lambda/issues"
-    },
-    "homepage": "https://github.com/ocrosby/client-sincsports-divisions-lambda#readme",
-    "dependencies": {
-        "cheerio": "^1.0.0-rc.2"
-    }
+  "name": "client-sincsports-divisions-lambda",
+  "version": "1.0.0",
+  "description": "A lambda function that retrieves sincsports divisions.",
+  "main": "index.js",
+  "scripts": {
+    "test": "gulp test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ocrosby/client-sincsports-divisions-lambda.git"
+  },
+  "keywords": [
+    "SincSports",
+    "Client",
+    "Divisions"
+  ],
+  "author": "Omar Crosby",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ocrosby/client-sincsports-divisions-lambda/issues"
+  },
+  "homepage": "https://github.com/ocrosby/client-sincsports-divisions-lambda#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.2"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-array": "0.0.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^3.0.0",
+    "chai-string": "^1.4.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-install": "^1.1.0",
+    "gulp-mocha": "^5.0.0",
+    "gulp-zip": "^4.1.0",
+    "mocha": "^5.0.1",
+    "nyc": "^11.4.1",
+    "should": "^13.2.1"
+  }
 }
