--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "scripts": {
     "clean": "gulp clean",
     "lint": "gulp lint",
-    "test": "nyc mocha ./test/**/*.spec.js --reporter mocha-multi-reporters --reporter-options configFile=mocha-config.json"
+    "test": "nyc mocha ./test/**/*.spec.js --reporter mocha-multi-reporters --reporter-options configFile=mocha-config.json && nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -72,6 +72,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-http": "^3.0.0",
     "chai-string": "^1.4.0",
+    "coveralls": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-install": "^1.1.0",
@@ -84,6 +85,7 @@
     "merge-stream": "^1.0.1",
     "mocha": "^5.0.1",
     "mocha-junit-reporter": "^1.17.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "mocha-multi-reporters": "^1.1.7",
     "nyc": "^11.4.1",
     "run-sequence": "^2.2.1",
