--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   "homepage": "https://github.com/ocrosby/client-sincsports-divisions-lambda#readme",
   "dependencies": {
     "bluebird": "^3.5.1",
-    "cheerio": "^1.0.0-rc.2"
+    "cheerio": "^1.0.0-rc.2",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
