Attempting to add a deployment phase to the circleci build.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,8 @@ jobs:
           # run tests!
           - run: yarn test
 
-          - package: gulp package
+          # Create the deployment package
+          - run: gulp package
 
 
     deployment:
