--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
             - run: yarn test
 
             # Create the deployment package
-            - run: gulp package
+            - run: yarn package
 
 deployment:
     production:
