--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,4 +43,5 @@ jobs:
             - run: yarn package
 
             # Deploy to S3
+            - run: sudo apt-get -y -qq install awscli
             - run: aws s3 sync dist s3://sincsports/lambda/ --delete
