--- a/package.json
+++ b/package.json
@@ -1,97 +1,98 @@
 {
-    "name": "client-sincsports-divisions-lambda",
-    "version": "1.0.0",
-    "description": "A lambda function that retrieves sincsports divisions.",
-    "nyc": {
-        "check-coverage": true,
-        "per-file": true,
-        "lines": 39,
-        "statements": 39,
-        "functions": 18,
-        "branches": 44,
-        "include": [
-            "src/**/*.js"
-        ],
-        "exclude": [
-            "test/**/*.spec.js"
-        ],
-        "reporter": [
-            "lcov",
-            "cobertura"
-        ],
-        "cache": true,
-        "all": true,
-        "report-dir": "./coverage",
-        "watermarks": {
-            "lines": [
-                80,
-                95
-            ],
-            "functions": [
-                80,
-                95
-            ],
-            "branches": [
-                80,
-                95
-            ],
-            "statements": [
-                80,
-                95
-            ]
-        }
-    },
-    "main": "src/index.js",
-    "scripts": {
-        "clean": "gulp clean",
-        "lint": "gulp lint",
-        "package": "gulp package",
-        "test": "nyc mocha ./test/**/*.spec.js --reporter mocha-multi-reporters --reporter-options configFile=mocha-config.json && nyc report --reporter=text-lcov | coveralls"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/ocrosby/client-sincsports-divisions-lambda.git"
-    },
-    "keywords": [
-        "SincSports",
-        "Client",
-        "Divisions"
+  "name": "client-sincsports-divisions-lambda",
+  "version": "1.0.0",
+  "description": "A lambda function that retrieves sincsports divisions.",
+  "nyc": {
+    "check-coverage": true,
+    "per-file": false,
+    "lines": 20,
+    "statements": 20,
+    "functions": 18,
+    "branches": 27,
+    "include": [
+      "src/**/*.js"
     ],
-    "author": "Omar Crosby",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/ocrosby/client-sincsports-divisions-lambda/issues"
-    },
-    "homepage": "https://github.com/ocrosby/client-sincsports-divisions-lambda#readme",
-    "dependencies": {
-        "bluebird": "^3.5.1",
-        "cheerio": "^1.0.0-rc.2",
-        "querystring": "^0.2.0"
-    },
-    "devDependencies": {
-        "chai": "^4.1.2",
-        "chai-array": "0.0.2",
-        "chai-as-promised": "^7.1.1",
-        "chai-http": "^3.0.0",
-        "chai-string": "^1.4.0",
-        "coveralls": "^3.0.0",
-        "gulp": "^3.9.1",
-        "gulp-clean": "^0.4.0",
-        "gulp-install": "^1.1.0",
-        "gulp-jshint": "^2.1.0",
-        "gulp-jsonlint": "^1.2.1",
-        "gulp-mocha": "^5.0.0",
-        "gulp-zip": "^4.1.0",
-        "jshint": "^2.9.5",
-        "jshint-checkstyle-file-reporter": "0.0.1",
-        "merge-stream": "^1.0.1",
-        "mocha": "^5.0.1",
-        "mocha-junit-reporter": "^1.17.0",
-        "mocha-lcov-reporter": "^1.3.0",
-        "mocha-multi-reporters": "^1.1.7",
-        "nyc": "^11.4.1",
-        "run-sequence": "^2.2.1",
-        "should": "^13.2.1",
-        "sinon": "^4.4.2"
+    "exclude": [
+      "test/**/*.spec.js"
+    ],
+    "reporter": [
+      "lcov",
+      "cobertura"
+    ],
+    "cache": true,
+    "all": true,
+    "report-dir": "./coverage",
+    "watermarks": {
+      "lines": [
+        80,
+        95
+      ],
+      "functions": [
+        80,
+        95
+      ],
+      "branches": [
+        80,
+        95
+      ],
+      "statements": [
+        80,
+        95
+      ]
     }
+  },
+  "main": "src/index.js",
+  "scripts": {
+    "clean": "gulp clean",
+    "lint": "gulp lint",
+    "package": "gulp package",
+    "test": "nyc mocha ./test/**/*.spec.js --reporter mocha-multi-reporters --reporter-options configFile=mocha-config.json && nyc report --reporter=text-lcov | coveralls"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ocrosby/client-sincsports-divisions-lambda.git"
+  },
+  "keywords": [
+    "SincSports",
+    "Client",
+    "Divisions"
+  ],
+  "author": "Omar Crosby",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ocrosby/client-sincsports-divisions-lambda/issues"
+  },
+  "homepage": "https://github.com/ocrosby/client-sincsports-divisions-lambda#readme",
+  "dependencies": {
+    "bluebird": "^3.5.1",
+    "cheerio": "^1.0.0-rc.2",
+    "querystring": "^0.2.0",
+    "request": "^2.83.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-array": "0.0.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^3.0.0",
+    "chai-string": "^1.4.0",
+    "coveralls": "^3.0.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-install": "^1.1.0",
+    "gulp-jshint": "^2.1.0",
+    "gulp-jsonlint": "^1.2.1",
+    "gulp-mocha": "^5.0.0",
+    "gulp-zip": "^4.1.0",
+    "jshint": "^2.9.5",
+    "jshint-checkstyle-file-reporter": "0.0.1",
+    "merge-stream": "^1.0.1",
+    "mocha": "^5.0.1",
+    "mocha-junit-reporter": "^1.17.0",
+    "mocha-lcov-reporter": "^1.3.0",
+    "mocha-multi-reporters": "^1.1.7",
+    "nyc": "^11.4.1",
+    "run-sequence": "^2.2.1",
+    "should": "^13.2.1",
+    "sinon": "^4.4.2"
+  }
 }
