--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,9 +44,11 @@ jobs:
 
             # Install the AWS CLI
             - run: sudo apt-get -y -qq install awscli
+            - run: aws --version
 
             # Deploy to S3
             - run: aws s3 sync dist s3://sincsports/lambda/
 
             # Update Lambda Function Code
-            - run: aws lambda update-function-code --function-name client-sincsports-divisions-lambda --s3-bucket sincsports --s3-key lambda/client-sincsports-divisions-lambda.zip --publish
+            # I don't understand why this isn't working as it works when I execute it locally.
+            # - run: aws lambda update-function-code --function-name client-sincsports-divisions-lambda --s3-bucket sincsports --s3-key lambda/client-sincsports-divisions-lambda.zip --publish
